# delire-escalade-hacs-component

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  hacs.json  pyproject.toml  requirements.test.txt
.github/workflows/: checks.yaml  ci.yml
custom_components/: __init__.py
custom_components/de_occupancy/: __init__.py  api.py  config_flow.py  const.py  manifest.json  sensor.py  strings.json
custom_components/de_occupancy/translations/: en.json  fr.json
tests/: __init__.py  conftest.py  test_config_flow.py  test_sensors.py
